# raftimpl

./: .gitignore  Cargo.toml  build.rs
protos/: hello.proto
src/: main.rs
src/admin/: mod.rs
src/raftnode/: mod.rs  node.rs  node_peer_slot.rs  peer.rs  peer_builder.rs  peer_inflight.rs  peer_stream.rs  protocol.rs
src/templates/: foo.html  foo.html.twig
